Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -51,17 +51,19 @@ Make sure you have the path to MSBuild.exe (`C:\Program Files (x86)\MSBuild\14.0
 
 ![image](https://user-images.githubusercontent.com/1712635/38892978-b5b1cf32-423d-11e8-8876-ccc298d1800f.png)
  
-In a PowerShell window or CMD window, move to your `eShopModernizing root folder`, then run the [Build.cmd](https://github.com/dotnet-architecture/eShopModernizing/blob/master/build.cmd) script as the following execution:
+In a **Developer Command Prompt for VS 2017** CMD window, move to your `eShopModernizing root folder`, then run the [Build.cmd](https://github.com/dotnet-architecture/eShopModernizing/blob/master/build.cmd) script as the following execution:
 
-================ TBD IMAGE ==================
+![image](https://user-images.githubusercontent.com/1712635/39272768-b92459a0-4891-11e8-9f4b-c4709a668095.png)
 
 The execution should finish like the following:
 
-================ TBD IMAGE ==================
+![image](https://user-images.githubusercontent.com/1712635/39273098-b64fb304-4892-11e8-962d-288b6b63d8e9.png)
 
 With that, the script would have built the bits and the Docker images. You can check them out by typing `docker images` in the command-line:
 
-================ TBD IMAGE ==================
+![image](https://user-images.githubusercontent.com/1712635/39273181-f8f0f876-4892-11e8-8edb-5e6993bec8df.png)
+
+**(*) Note** that the image's tags might vary depending on the base images you are targeting and the specific tags you use in the docker-compose.yml file. You can change that on every dockerfile per project targeting one or another base image tag, then you can specify the tag you prefer for your custom images at the docker-compose.yml file. In this case we were targeting the `4.7.1-windowsservercore-ltsc2016` tag for base images (ASP.NET and WCF images), therefore, our custom images have a similar tag, for clarity on the base imaged being used.
 
 You can now directly jump to the section **"Scenario 2: Publish/Push your Windows Container image into a Docker Registry (i.e. Docker Hub) using the Docker CLI"** in order to publish/push the images into the Docker Registry.
 
