Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -166,6 +166,6 @@ But in real projects, we encourage you to automate the application build, Docker
 
 Basically, using an automated CI/CD approach, the developer shouldn't manually publish/push a Docker image from his/her PC but **just push the code** to the initial code repo, such as a Git repo (GitHub, VSTS, etc.) as shown in the following diagram.
 
-![image](https://user-images.githubusercontent.com/1712635/38701251-3dbebbfa-3e52-11e8-8271-c2bb8cc91d27.png)
+=================== VSTS CI/CD image TBD ======================
 
 As you can see, it is the automated build pipeline (in this case VSTS) the one who builds the Docker image and pushes it into the Docker Registry. Doing so, you can track exactly what version of the code was compiled and use to build any specific Docker image and get all the benefits of CI/CD and DevOps in general.
