Updated 22. Adding Docker Support (markdown)

--- a/22.-Adding-Docker-Support.md
+++ b/22.-Adding-Docker-Support.md
@@ -1,6 +1,14 @@
 Now that we've kicked around the legacy version of the application, let's work on adding docker support by containerizing the WCF service.
 
-## Add Support
+##  Scenario: Containerize a WCF service
+In this scenario you will containerize a WCF service traditionally built with .NET Framework 4.x.
+
+The diagram below shows the scenario for the containerized WCF service running in a development PC with Docker for Windows.
+
+![image](https://user-images.githubusercontent.com/1712635/39451831-efb91ec8-4c84-11e8-8354-37df8c41889d.png)
+
+
+## Add Docker Support
 Adding docker support to your project is a trivial task in Visual Studio. Let's wrap the WCF service in a container. To do this: 
 1. Right-click on the WCF project.
 2. Hover over 'add' in the context menu.
