Updated 21. Tour on the WCF service and WinForms apps (markdown)

--- a/21.-Tour-on-the-WCF-service-and-WinForms-apps.md
+++ b/21.-Tour-on-the-WCF-service-and-WinForms-apps.md
@@ -1,3 +1,8 @@
+##  Scenario
+The diagram below explains the simple scenario of the original legacy applications.
+
+![image](https://user-images.githubusercontent.com/1712635/39452019-9bc89522-4c85-11e8-8204-f639aa4be992.png)
+
 Let's have a quick experiment with the legacy version of the application to get a lay of the land. After you've pulled the repo, you'll notice that there are two projects: a WinForms project and a WCF service. Let's look at each of those.
 
 ### WinForms
