Updated 22. Adding Docker Support (markdown)

--- a/22.-Adding-Docker-Support.md
+++ b/22.-Adding-Docker-Support.md
@@ -21,48 +21,49 @@ This actions does two things:
 2. It adds a docker-compose project to your solution.
 
 ## Edit the dockerfile
-As you will read about later in the wiki, there is a caveat associated with adding docker support to a WCF service. Let's open up the dockerfile that was just added and paste in these changes:
+Let's open up the dockerfile that was just added and paste in these changes:
 
 ```dockerfile
-FROM microsoft/aspnet:4.6.2
-
-#These features are required for WCF
-RUN Add-WindowsFeature Web-Server; \
-Add-WindowsFeature NET-WCF-TCP-Activation45; \
-Add-WindowsFeature NET-WCF-HTTP-Activation45; \
-Add-WindowsFeature Web-WebSockets
-
+FROM microsoft/wcf:4.7.1
+EXPOSE 80
 ARG source
 WORKDIR /inetpub/wwwroot
 COPY ${source:-obj/Docker/publish} .
 ```
+You can see that your custom WCF service image will be based on the microsoft/wcf:4.7.1 base image which is pretty similar to the ASP.NET base image but it has a few WCF activations in place.
 
 ## Edit docker-compose files
 Now let's edit the newly generated docker-compose files in the docker-compose project. First, open up docker-compose.yml. 
 
 Previously, our service was connected to a local database. Why not containerize the database as well? This will be easy. Under 'services', let's define our sql container:
 
-```docker-compose
+```docker-compose.yml
+version: '3.4'
 services:
-   eshopwcfservice:
-      ...
+  eshopwcfservice:
+    image: eshop/wcfservice
+    build:
+      context: ./src/eShopWCFService
+      dockerfile: Dockerfile
+    depends_on:
+      - sql.data
 
-   sql.data:
-       image: microsoft/mssql-server-windows-developer
+  sql.data:
+    image: microsoft/mssql-server-windows-developer
 ```
 
-We define a sql container with the name "sql.data". We're not altering our sql container, so we can simply reference the already published image, "mssql-server-windows-developer". Now, let's open up docker-compose.override.yml and make some changes there:
+We define a sql container with the name "sql.data". We're not altering our sql container, so we can simply reference the already published image, "mssql-server-windows-developer". Now, let's open up docker-compose.override.yml and make some changes there in order to customize our services:
 
-```docker-compose
+```docker-compose.override.yml
 services:
    eshopwcfservice:
       environment:
-        - ConnectionString=Server=sql.data;Database=eShopDatabase;User Id=sa;Password=Testing11@@
+        - ConnectionString=Server=sql.data;Database=eShopDatabase;User Id=sa;Password=YOUR-PASSWORD@@
       ports:
        - "80:80"
    sql.data:
       environment:
-       - SA_PASSWORD=Testing11@@
+       - SA_PASSWORD=YOUR-PASSWORD@@
        - ACCEPT_EULA=Y
       ports:
        - "5433:1433"
