Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -19,7 +19,7 @@ Publishing your custom Docker images in a Docker Registry requires a 2-step proc
 1. Create your custom Docker image (Windows Container image, in this case)
 2. Publish/Push your custom Docker image into a Docker Registry (i.e. Docker Hub or Azure Container Registry)
 
-You can also do the same action but in an automated way from your CI or build pipelines like in Visual Studio Team Services (VSTS) or Jenkins.
+You can also do the same action but in an automated way from your CI or build pipelines like in Azure DevOps or Jenkins.
 
 ##  Scenario 1: Create your Windows Container images
 
@@ -164,8 +164,6 @@ Check out the rest of the Wiki posts in order to actually deploy the application
 The previous manual steps are good enough when learning Docker and Windows Containers or for a local developer scenario.
 But in real projects, we encourage you to automate the application build, Docker image build, image publish to a Docker registry and even the deployment to final deployment environments such as the ones mentioned in Azure.
 
-Basically, using an automated CI/CD approach, the developer shouldn't manually publish/push a Docker image from his/her PC but **just push the code** to the initial code repo, such as a Git repo (GitHub, VSTS, etc.) as shown in the following diagram.
+Basically, using an automated CI/CD approach, the developer shouldn't manually publish/push a Docker image from his/her PC but **just push the code** to the initial code repo, such as a Git repo (GitHub, Azure DevOps, etc.). Azure DevOps supports [this process as described in the documentation](https://docs.microsoft.com/en-us/dotnet/standard/containerized-lifecycle-architecture/docker-devops-workflow/docker-application-outer-loop-devops-workflow).
 
-=================== VSTS CI/CD image TBD ======================
-
-As you can see, it is the automated build pipeline (in this case VSTS) the one who builds the Docker image and pushes it into the Docker Registry. Doing so, you can track exactly what version of the code was compiled and use to build any specific Docker image and get all the benefits of CI/CD and DevOps in general.
+It is the automated build pipeline (in this case Azure DevOps) that builds the Docker image and pushes it into the Docker Registry. Doing so, you can track exactly what version of the code was compiled and used to build any specific Docker image and get all the benefits of CI/CD and DevOps in general. [Learn more](https://docs.microsoft.com/en-us/azure/devops/pipelines/languages/docker?view=azure-devops)
