--- a/05.-Deploying-the-Apps-to-ACI-(Azure-Container-Instances).md
+++ b/05.-Deploying-the-Apps-to-ACI-(Azure-Container-Instances).md
@@ -159,7 +159,7 @@ Once the app has the database created in the SQL Container any data operation in
 
 ## Key takeaways about ACI (Azure Container Instances)
 
-Deploying Windows Containers with either SQL Server or full .NET Framework / ASP.NET into Azure Container Instances (ACI) is not quite as fast as deploying to a regular Docker Host (like a Windows Server 2016 with Windows Containers) because the Docker image has to be downloaded every time and the sizes of the [SQL container image (15.1 GB)](https://hub.docker.com/r/microsoft/mssql-server-windows-developer/) and the [ASP.NET container image (13.9 GB)](https://hub.docker.com/r/microsoft/aspnet/) are significantly large, however it is much cheaper than maintaining your own docker host (permanently on-line Windows Server 2016 with Windows Containers VM in Azure) not to mention a whole orchestrator like Kubernetes in Azure (AKS/ACS) or Azure Service Fabric which are, on the other hand, great choices for production deployments. 
+Deploying Windows Containers with either SQL Server or full .NET Framework / ASP.NET into Azure Container Instances (ACI) is not quite as fast as deploying to a regular Docker Host (like a Windows Server 2016 with Windows Containers) because the Docker image has to be downloaded every time and the sizes of the [SQL container image (15.1 GB)](https://hub.docker.com/r/microsoft/mssql-server-windows-developer/) and the [ASP.NET container image (13.9 GB)](https://hub.docker.com/r/microsoft/aspnet/) are significantly large, however it is much cheaper than maintaining your own docker host (permanently on-line Windows Server 2016 with Windows Containers VM in Azure). 
 
 As main conclusion, using Azure Container Instances is a very compelling option for Dev/Test scenarios and for CI/CD pipelines.
 
